--- a/M14_HW.ipynb
+++ b/M14_HW.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "7e6c6607",
    "metadata": {},
    "outputs": [
@@ -73,30 +73,44 @@
      "output_type": "stream",
      "text": [
       "total 72\n",
-      "drwxr-xr-x  6 meldrumapple  staff    192 Jul 11 11:08 \u001b[34mBooklover\u001b[m\u001b[m\n",
       "drwxr-xr-x  6 meldrumapple  staff    192 Jul 11 12:44 \u001b[34mBooklover.egg-info\u001b[m\u001b[m\n",
       "-rw-r--r--  1 meldrumapple  staff   1071 Jul 11 11:05 LICENSE\n",
       "-rw-r--r--@ 1 meldrumapple  staff  13386 Jul  1 13:23 M09-HW-BookLover-v2.ipynb\n",
-      "-rw-r--r--@ 1 meldrumapple  staff   6594 Jul 11 12:56 M14_HW.ipynb\n",
+      "-rw-r--r--@ 1 meldrumapple  staff   5503 Jul 11 13:24 M14_HW.ipynb\n",
       "-rw-r--r--  1 meldrumapple  staff      6 Jul 11 11:05 README.md\n",
-      "-rw-r--r--  1 meldrumapple  staff    323 Jul 11 12:17 setup.py\n",
-      "\n",
-      "./Booklover:\n",
-      "total 24\n",
-      "-rw-r--r--@ 1 meldrumapple  staff  1070 Jul  1 15:33 booklover.py\n",
-      "-rw-r--r--@ 1 meldrumapple  staff   423 Jul  1 15:38 booklover_results.txt\n",
-      "-rw-r--r--  1 meldrumapple  staff  1440 Jul  1 15:35 booklover_test.py\n",
+      "drwxr-xr-x  6 meldrumapple  staff    192 Jul 11 13:22 \u001b[34mlovers\u001b[m\u001b[m\n",
+      "drwxr-xr-x  6 meldrumapple  staff    192 Jul 11 13:22 \u001b[34mlovers.egg-info\u001b[m\u001b[m\n",
+      "-rw-r--r--  1 meldrumapple  staff    334 Jul 11 13:22 setup.py\n",
       "\n",
       "./Booklover.egg-info:\n",
       "total 32\n",
       "-rw-r--r--  1 meldrumapple  staff  281 Jul 11 12:44 PKG-INFO\n",
       "-rw-r--r--  1 meldrumapple  staff  209 Jul 11 12:44 SOURCES.txt\n",
       "-rw-r--r--  1 meldrumapple  staff    1 Jul 11 12:44 dependency_links.txt\n",
-      "-rw-r--r--  1 meldrumapple  staff   10 Jul 11 12:44 top_level.txt\n"
+      "-rw-r--r--  1 meldrumapple  staff   10 Jul 11 12:44 top_level.txt\n",
+      "\n",
+      "./lovers:\n",
+      "total 16\n",
+      "drwxr-xr-x  3 meldrumapple  staff    96 Jul 11 12:57 \u001b[34m__pycache__\u001b[m\u001b[m\n",
+      "-rw-r--r--@ 1 meldrumapple  staff  1070 Jul  1 15:33 booklover.py\n",
+      "-rw-r--r--  1 meldrumapple  staff  1440 Jul  1 15:35 booklover_test.py\n",
+      "\n",
+      "./lovers/__pycache__:\n",
+      "total 8\n",
+      "-rw-r--r--  1 meldrumapple  staff  1433 Jul 11 12:57 booklover.cpython-39.pyc\n",
+      "\n",
+      "./lovers.egg-info:\n",
+      "total 32\n",
+      "-rw-r--r--  1 meldrumapple  staff  275 Jul 11 13:22 PKG-INFO\n",
+      "-rw-r--r--  1 meldrumapple  staff  146 Jul 11 13:22 SOURCES.txt\n",
+      "-rw-r--r--  1 meldrumapple  staff    1 Jul 11 13:22 dependency_links.txt\n",
+      "-rw-r--r--  1 meldrumapple  staff    1 Jul 11 13:22 top_level.txt\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "os.chdir('/Users/meldrumapple/Desktop/DS5100/HW14')\n",
     "!ls -lR"
    ]
   },
@@ -145,13 +159,10 @@
    "source": [
     "(base) Kates-MacBook-Air:HW14 meldrumapple$ pip install -e .\n",
     "Obtaining file:///Users/meldrumapple/Desktop/DS5100/HW14\n",
-    "Installing collected packages: Booklover\n",
-    "  Attempting uninstall: Booklover\n",
-    "    Found existing installation: Booklover 0.1\n",
-    "    Uninstalling Booklover-0.1:\n",
-    "      Successfully uninstalled Booklover-0.1\n",
-    "  Running setup.py develop for Booklover\n",
-    "Successfully installed Booklover-0.1"
+    "Installing collected packages: lovers\n",
+    "  Running setup.py develop for lovers\n",
+    "Successfully installed lovers-0.1\n",
+    "(base) Kates-MacBook-Air:HW14 meldrumapple$ "
    ]
   },
   {
@@ -176,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "5924fca8-6483-4f2b-a33f-6550d1726d6e",
    "metadata": {},
    "outputs": [
@@ -184,10 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/meldrumapple/Desktop/DS5100/DS5100-2022-06-RA/lessons/M14/hw_test.py\", line 3, in <module>\n",
-      "    ted = booklover('ted mosby', 'tmosby@mosby.org', 'non-fiction', 1, ['architech handbook'])\n",
-      "TypeError: 'module' object is not callable\n"
+      "1\n"
      ]
     }
    ],
@@ -196,14 +204,6 @@
     "os.chdir('/Users/meldrumapple/Desktop/DS5100/DS5100-2022-06-RA/lessons/M14')\n",
     "!python hw_test.py"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19f76619-9728-4622-84de-728830a650a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
