--- a/M14_HW.ipynb
+++ b/M14_HW.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "7e6c6607",
    "metadata": {},
    "outputs": [
@@ -72,15 +72,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 72\n",
-      "drwxr-xr-x  6 meldrumapple  staff    192 Jul 11 12:44 \u001b[34mBooklover.egg-info\u001b[m\u001b[m\n",
-      "-rw-r--r--  1 meldrumapple  staff   1071 Jul 11 11:05 LICENSE\n",
-      "-rw-r--r--@ 1 meldrumapple  staff  13386 Jul  1 13:23 M09-HW-BookLover-v2.ipynb\n",
-      "-rw-r--r--@ 1 meldrumapple  staff   5503 Jul 11 13:24 M14_HW.ipynb\n",
-      "-rw-r--r--  1 meldrumapple  staff      6 Jul 11 11:05 README.md\n",
-      "drwxr-xr-x  6 meldrumapple  staff    192 Jul 11 13:22 \u001b[34mlovers\u001b[m\u001b[m\n",
-      "drwxr-xr-x  6 meldrumapple  staff    192 Jul 11 13:22 \u001b[34mlovers.egg-info\u001b[m\u001b[m\n",
-      "-rw-r--r--  1 meldrumapple  staff    334 Jul 11 13:22 setup.py\n",
+      "total 424\n",
+      "drwxr-xr-x  6 meldrumapple  staff     192 Jul 11 12:44 \u001b[34mBooklover.egg-info\u001b[m\u001b[m\n",
+      "-rw-r--r--  1 meldrumapple  staff    1071 Jul 11 11:05 LICENSE\n",
+      "-rw-r--r--@ 1 meldrumapple  staff   13386 Jul  1 13:23 M09-HW-BookLover-v2.ipynb\n",
+      "-rw-r--r--@ 1 meldrumapple  staff    7222 Jul 11 15:52 M14_HW.ipynb\n",
+      "-rw-r--r--@ 1 meldrumapple  staff  176553 Jul 11 13:38 M14_HW.pdf\n",
+      "-rw-r--r--  1 meldrumapple  staff       6 Jul 11 11:05 README.md\n",
+      "drwxr-xr-x  7 meldrumapple  staff     224 Jul 11 15:51 \u001b[34mlovers\u001b[m\u001b[m\n",
+      "drwxr-xr-x  6 meldrumapple  staff     192 Jul 11 15:51 \u001b[34mlovers.egg-info\u001b[m\u001b[m\n",
+      "-rw-r--r--  1 meldrumapple  staff     334 Jul 11 13:22 setup.py\n",
       "\n",
       "./Booklover.egg-info:\n",
       "total 32\n",
@@ -90,21 +91,23 @@
       "-rw-r--r--  1 meldrumapple  staff   10 Jul 11 12:44 top_level.txt\n",
       "\n",
       "./lovers:\n",
-      "total 16\n",
-      "drwxr-xr-x  3 meldrumapple  staff    96 Jul 11 12:57 \u001b[34m__pycache__\u001b[m\u001b[m\n",
+      "total 24\n",
+      "-rw-r--r--  1 meldrumapple  staff    34 Jul 11 15:46 __init__.py\n",
+      "drwxr-xr-x  4 meldrumapple  staff   128 Jul 11 15:52 \u001b[34m__pycache__\u001b[m\u001b[m\n",
       "-rw-r--r--@ 1 meldrumapple  staff  1070 Jul  1 15:33 booklover.py\n",
       "-rw-r--r--  1 meldrumapple  staff  1440 Jul  1 15:35 booklover_test.py\n",
       "\n",
       "./lovers/__pycache__:\n",
-      "total 8\n",
+      "total 16\n",
+      "-rw-r--r--  1 meldrumapple  staff   187 Jul 11 15:52 __init__.cpython-39.pyc\n",
       "-rw-r--r--  1 meldrumapple  staff  1433 Jul 11 12:57 booklover.cpython-39.pyc\n",
       "\n",
       "./lovers.egg-info:\n",
       "total 32\n",
-      "-rw-r--r--  1 meldrumapple  staff  275 Jul 11 13:22 PKG-INFO\n",
-      "-rw-r--r--  1 meldrumapple  staff  146 Jul 11 13:22 SOURCES.txt\n",
-      "-rw-r--r--  1 meldrumapple  staff    1 Jul 11 13:22 dependency_links.txt\n",
-      "-rw-r--r--  1 meldrumapple  staff    1 Jul 11 13:22 top_level.txt\n"
+      "-rw-r--r--  1 meldrumapple  staff  275 Jul 11 15:51 PKG-INFO\n",
+      "-rw-r--r--  1 meldrumapple  staff  210 Jul 11 15:51 SOURCES.txt\n",
+      "-rw-r--r--  1 meldrumapple  staff    1 Jul 11 15:51 dependency_links.txt\n",
+      "-rw-r--r--  1 meldrumapple  staff    7 Jul 11 15:51 top_level.txt\n"
      ]
     }
    ],
@@ -187,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "5924fca8-6483-4f2b-a33f-6550d1726d6e",
    "metadata": {},
    "outputs": [
@@ -195,6 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Welcome to lovers module\n",
       "1\n"
      ]
     }
@@ -204,6 +208,14 @@
     "os.chdir('/Users/meldrumapple/Desktop/DS5100/DS5100-2022-06-RA/lessons/M14')\n",
     "!python hw_test.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22011006-2e42-4d4e-8ce2-9cac7c2ce758",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
